# lorri

./: .envrc  .gitignore  Cargo.nix  Cargo.toml  MAINTAINERS.md  README.md  build.ninja  default.nix  release.nix  shell.nix
.github/workflows/: ci.nix  ci.yml
nix/: nixpkgs-stable.json  update-dependencies.sh  update-nixpkgs.sh
nix/ci/: default.nix
nix/lib/: default.nix  execline.nix
src/: build_loop.rs  builder.rs  cli.rs  constants.rs  daemon.rs  lib.rs  logging.rs  main.rs  nix.rs  ops.rs  project.rs  run_async.rs  watch.rs
src/daemon/: client.rs  server.rs
src/ops/: error.rs
src/ops/direnv/: envrc.bash
src/socket/: communicate.rs  path.rs
tests/integration/: direnvtestcase.rs  envrctestcase.rs  gc.rs  trivial.rs
tests/shell/: main.rs
