[package]
name = "lorri"
# See MAINTAINERS.md for details about versioning
version = "1.7.1" # Format: MAJOR.MINOR.0
authors = [
  "Graham Christensen <graham.christensen@target.com>",
  "Profpatsch <mail@profpatsch.de>",
]
homepage = "https://github.com/nix-community/lorri"
license = "Apache-2.0"
edition = "2021"

# before updating dependencies: we want to keep the rustc compatible with 1.41.0 for now (start of 2020).
[dependencies]
# central features
notify = "6.1.1"
atomicwrites = "0.2.5"
crossbeam-channel = "0.5.12"
nix = "0.20.0"
regex = "1.4.3"
tempfile = "3.1.0"
anyhow = "1.0"
thiserror = "1.0"

# TODO: update to 0.3
structopt.version = "0.2"

# TODO: update to 0.3
structopt.default-features = false

# TODO: update to 0.3
structopt.features = [
  # "default",
  "suggestions",
  "color",
  # "wrap_help",
  # "yaml",
  # "debug",
  "no_cargo",
  # "doc" (enables yaml)
]
# logging;
slog = { version = "2.7.0", features = [
  "release_max_level_debug",
] } # enable debug messages in the release so that --verbose still works
slog-term = "2.5.0"
fastrand = "1.4.0"
# serialization
serde = "1.0.88"
serde_derive = "1.0.88"
serde_json = "1.0.38"
bincode = "1.3.2"
# nice-to-have
ctrlc = { version = "3.1.8", features = ["termination"] }
directories = "3.0.1"
md5 = "0.7.0"
vec1 = ">= 1.1.0, <1.7.0"
human-panic = { path = "vendor/human-panic" }
notify-debouncer-full = "0.3.1"

[dev-dependencies]
# 1.0.0 requires at least rust 1.50
proptest.version = "0.10.1"
# 1.0.0 requires at least rust 1.50
proptest.default-features = false
# 1.0.0 requires at least rust 1.50
proptest.features = [
  "std",
  # reenable if proptest kills the test runner
  # "fork",
  # "timeout"
]
